feature: handle response for addition params